Fixing x tick number size, edits to about.

--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,10 @@ body {
   width: 100%;
 }
 
+#chart text {
+  font-size: .6em;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
