--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,8 @@
 
 @import "reset";
 @import "variables";
+@import "alphapack9";
+
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
